<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ffffff"
    tools:context=".SignUpActivity" >
	<LinearLayout
	    android:orientation="horizontal"
	    android:layout_width="match_parent"
	    android:layout_height="0dp"
	    android:layout_weight="90">
	    <TextView
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:gravity="center_horizontal|center_vertical"
	        android:text="@string/activity_sign_up_title"
	        android:textColor="#40ddc2"
	        android:textSize="18sp"/>
	</LinearLayout>
	<TextView
	    android:layout_width="match_parent"  
	    android:layout_height="0dp"
	    android:layout_weight="60">
	</TextView>
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="0dp"
	    android:layout_weight="110"
	    android:orientation="horizontal">
	    <TextView
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_weight="60">
	    </TextView>
	    <LinearLayout
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_weight="600"
	        android:orientation="vertical">
			<EditText
			    android:id="@+id/et_sign_up_username"
			    android:layout_width="match_parent"
			    android:layout_height="0dp"
			    android:layout_weight="108"
			    android:hint="@string/activity_sign_up_edit_text_username_hint"
			    android:textSize="15sp"
                android:textColor="#000000"
			    android:textColorHint="#6d6e71"/>
			<TextView
		        android:layout_width="match_parent"
		        android:layout_height="0dp"
		        android:layout_weight="1"
		        android:background="#6d6e71"/>
	   		<TextView
		        android:layout_width="match_parent"
		        android:layout_height="0dp"
		        android:layout_weight="1"/> 
	    </LinearLayout>
	    <TextView
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_weight="60">
	    </TextView>
	</LinearLayout>
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="0dp"
	    android:layout_weight="110"
	    android:orientation="horizontal">
	    <TextView
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_weight="60">
	    </TextView>
	    <LinearLayout
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_weight="600"
	        android:orientation="vertical">
			<EditText
		        android:id="@+id/et_sign_up_email"
		        android:layout_width="match_parent"
		        android:layout_height="0dp"
		        android:layout_weight="108"
		        android:hint="@string/activity_sign_up_edit_text_email_hint"
		        android:textSize="15sp"
                android:textColor="#000000"
		        android:textColorHint="#6d6e71"/>
	   		<TextView
		        android:layout_width="match_parent"
		        android:layout_height="0dp"
		        android:layout_weight="1"
		        android:background="#6d6e71"/>
	   		<TextView
		        android:layout_width="match_parent"
		        android:layout_height="0dp"
		        android:layout_weight="1"/> 
	    </LinearLayout>
	    <TextView
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_weight="60">
	    </TextView>
	</LinearLayout>	
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="0dp"
	    android:layout_weight="110"
	    android:orientation="horizontal">
	    <TextView
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_weight="60">
	    </TextView>
	    <LinearLayout
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_weight="600"
	        android:orientation="vertical">
			<EditText
                android:id="@+id/et_sign_up_password"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="108"
                android:hint="@string/activity_sign_up_edit_text_password_hint"
                android:textSize="15sp"
                android:textColor="#000000"
                android:textColorHint="#6d6e71"
                android:password="true"/>
	    	<TextView
		        android:layout_width="match_parent"
		        android:layout_height="0dp"
		        android:layout_weight="1"
		        android:background="#6d6e71"/>
	   		<TextView
		        android:layout_width="match_parent"
		        android:layout_height="0dp"
		        android:layout_weight="1"/> 
	    </LinearLayout>
	    <TextView
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_weight="60">
	    </TextView>
	</LinearLayout>	
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="0dp"
	    android:layout_weight="110"
	    android:orientation="horizontal">
	    <TextView
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_weight="60"/>
	    <LinearLayout
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_weight="600"
	        android:orientation="vertical">
			<EditText
		        android:id="@+id/et_sign_up_password_check"
		        android:layout_width="match_parent"
		        android:layout_height="0dp"
		        android:layout_weight="108"
		        android:hint="@string/activity_sign_up_edit_text_password_check_hint"
		        android:textSize="15sp"
                android:textColor="#000000"
                android:textColorHint="#6d6e71"
                android:password="true"/>
	    	<TextView
		        android:layout_width="match_parent"
		        android:layout_height="0dp"
		        android:layout_weight="1"
		        android:background="#6d6e71"/>
	   		<TextView
		        android:layout_width="match_parent"
		        android:layout_height="0dp"
		        android:layout_weight="1"/> 
	    </LinearLayout>
	    <TextView
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_weight="60"/>
	</LinearLayout>		
	<TextView
	    android:layout_width="match_parent"
	    android:layout_height="0dp"
	    android:layout_weight="80"/>
	<LinearLayout
	    android:orientation="horizontal"
	    android:layout_width="match_parent"
	    android:layout_height="0dp"
	    android:layout_weight="120">
	    <TextView
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_weight="60"/>
	    <Button
	        android:id="@+id/btn_sign_up"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_weight="600"
	        android:background="#40ddc2"
	        android:text="@string/activity_sign_up_button_sign_up"
	        android:gravity="center_horizontal|center_vertical"
	        android:textSize="20sp"
	        android:textColor="#ffffff"/>
	    <TextView
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_weight="60"/>
	</LinearLayout>
	<TextView
	    android:layout_width="match_parent"
	    android:layout_height="0dp"
	    android:layout_weight="490"/>
	    
</LinearLayout>